--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,18 @@
-<html>
-  <head>
-    <title>Japanese map graph</title>
-  </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
+  <title>Japanese Prefectures</title>
+</head>
+<body>
+
+  <div class="map"></div>
+  <div class="map"></div>
+  <div class="map"></div>
+  <div class="map"></div>
+
+  <script src="./app.js"></script>
+</body>
 </html>
