--- a/pages/index.html
+++ b/pages/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="Cf23OwU9F3xgDzEmqm5B95GdQlB4mbJN-vIRGTkfgWo" />
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://unpkg.com/x-data-spreadsheet@1.1.5/dist/xspreadsheet.css">
   <script src="https://unpkg.com/x-data-spreadsheet@1.1.5/dist/xspreadsheet.js"></script>
