Add twitter sharing

--- a/pages/index.html
+++ b/pages/index.html
@@ -20,7 +20,8 @@
         <select name="selector" id="selector"></select>
         <label for="head">Color</label>
         <input type="color" id="color" name="color" value="#0000FF">
-        <button id="dl_svg">Download</button>
+        <button id="dl_svg">Download SVG</button>
+        <button id="share_twitter">Tweet</button>
     </div>
 
     <div id="container">
