--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="map"></div>
     </div>
 
-    <script src="./pages/app.js"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
