--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <h1 id="title">都道府県地図グラフ</h1>
+    <div id="memo">スプレッドシートの左列に都道府県名、右列に数値をいれることでグラフにできます。作ったグラフを画像としてダウンロードしたり、Twitterで共有したりできます。</div>
     <div id="navi">
         <label for="selector">Select map</label>
         <select name="selector" id="selector"></select>
