Change twitter card image to FQDN

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="都道府県地図グラフ" />
-    <meta name="twitter:image" content="./sample-graph.png">
+    <meta name="twitter:image" content="https://otahi.github.io/map-graph/sample-graph.png">
     <title>都道府県地図グラフ</title>
 </head>
 
